--- a/src/scss/index-page/index-step-section.scss
+++ b/src/scss/index-page/index-step-section.scss
@@ -16,9 +16,8 @@
 }
 
 .discription-card {
-    padding-bottom: 40px;
+    padding-bottom: 50px;
     width: 320px;
-    height: 480px;
     border: 1px solid #b9b9b9;
 }
 
@@ -27,23 +26,24 @@
 }
 
 .discription-card__img {
-    width: 315;
-    height: 210px;
+    width: 320;
+    height: 260px;
     background-repeat: no-repeat;
     background-position: center;
     margin-bottom: 50px;
 }
 
+
 .discription-card__img1 {
-    background-image: url(../../img/step-section/card-content__img4.png);
+    background-image: url(../../img/step-section/card-content__img1.jpg);
 }
 
 .discription-card__img2 {
-    background-image: url(../../img/step-section/card-content__img5.png);
+    background-image: url(../../img/step-section/card-content__img2.jpg);
 }
 
 .discription-card__img3 {
-    background-image: url(../../img/step-section/card-content__img6.png);
+    background-image: url(../../img/step-section/card-content__img3.jpg);
 }
 
 .discription-card__title {
