--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -74,7 +74,8 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
-  text-decoration-skip-ink: auto;
+  -webkit-text-decoration-skip: ink;
+          text-decoration-skip-ink: auto;
 }
 
 a {
@@ -108,6 +109,11 @@ select {
     transition-duration: 0.01ms !important;
     scroll-behavior: auto !important;
   }
+}
+::-moz-placeholder {
+  padding-left: 20px;
+  color: #B3A99B;
+  font-size: 14px;
 }
 ::placeholder {
   padding-left: 20px;
@@ -468,35 +474,29 @@ button {
   margin-bottom: 18px;
 }
 
-@media only screen and (max-width: 800px) {
-  .block-list__icon {
-    display: inline;
-  }
+@media only screen and (max-width: 1024px) {
   .block-list {
-    display: flex;
-    align-items: center;
+    left: 0px;
+    padding: 20px 40px 40px 10px;
   }
-  .block-list__icon {
-    width: 115px;
-    height: 115px;
+}
+@media only screen and (max-width: 768px) {
+  .block-list {
+    padding: 10px 20px 20px 10px;
   }
   .discriptin-block__list {
-    padding-top: 40px;
-    padding-left: 40px;
+    padding-left: 18px;
   }
   .list__title {
-    font-size: 32px;
-    line-height: 41px;
-    margin-bottom: 20px;
+    font-size: 26px;
+    margin-bottom: 12px;
   }
   .list__item {
-    font-size: 22px;
-    line-height: 28px;
-    padding-left: 40px;
-    background-image: url(../img/tb-list-item__check-img_800.png);
+    font-size: 16px;
+    padding-left: 32px;
   }
   .list__item:not(:last-of-type) {
-    margin-bottom: 14px;
+    margin-bottom: 16px;
   }
 }
 @media only screen and (max-width: 640px) {
@@ -736,7 +736,8 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
-  text-decoration-skip-ink: auto;
+  -webkit-text-decoration-skip: ink;
+          text-decoration-skip-ink: auto;
 }
 
 a {
@@ -878,7 +879,8 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
-  text-decoration-skip-ink: auto;
+  -webkit-text-decoration-skip: ink;
+          text-decoration-skip-ink: auto;
 }
 
 a {
@@ -2439,4 +2441,4 @@ body {
 .discriptin-block {
   display: flex;
   justify-content: space-between;
-}
+}/*# sourceMappingURL=style.css.map */
