--- a/Compiled/css/style.css
+++ b/Compiled/css/style.css
@@ -501,7 +501,7 @@ button {
 
   .list__item {
     font-size: 16px;
-    padding-left: 28px;
+    padding-left: 32px;
   }
 
   .list__item:not(:last-of-type) {
@@ -514,6 +514,10 @@ button {
   }
 }
 @media only screen and (max-width: 480px) {
+  .index-main-section {
+    background-position: right -180px bottom -190px;
+  }
+
   .discriptin-block__list {
     padding-top: 40px;
     padding-left: 0px;
