--- a/src/scss/index-page/index-main-section.scss
+++ b/src/scss/index-page/index-main-section.scss
@@ -119,8 +119,6 @@
     }
 }
 
-
-
 @media only screen and (max-width: 640px) {
     .block-list__icon {
         display: none;
@@ -128,6 +126,9 @@
 }
 
 @media only screen and (max-width: 480px) {
+    .index-main-section {
+        background-position: right -180px bottom -190px;
+    }
     .discriptin-block__list {
         padding-top: 40px;
         padding-left: 0px;
