--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -505,6 +505,9 @@ button {
   }
 }
 @media only screen and (max-width: 480px) {
+  .index-main-section {
+    background-position: right -180px bottom -190px;
+  }
   .discriptin-block__list {
     padding-top: 40px;
     padding-left: 0px;
