--- a/src/scss/index-page/index-main-section.scss
+++ b/src/scss/index-page/index-main-section.scss
@@ -61,10 +61,6 @@
     padding-left: 22px;
 }
 
-.block-list__icon {
-    display: none;
-}
-
 .list__title {
     font-size: 32px;
     font-weight: 500;
@@ -120,8 +116,13 @@
 }
 
 @media only screen and (max-width: 640px) {
-    .block-list__icon {
-        display: none;
+    .index-main-section {
+        height: 563px;
+        background-position: right -180px bottom -190px;
+    }
+
+    .block-list {
+        top: 338px;
     }
 }
 
@@ -129,8 +130,8 @@
     .index-main-section {
         background-position: right -180px bottom -190px;
     }
+
     .discriptin-block__list {
-        padding-top: 40px;
         padding-left: 0px;
     }
 
@@ -140,16 +141,11 @@
         margin-bottom: 16px;
     }
 
-    .list__item {
-        font-size: 18px;
-        line-height: 23px;
-        padding-left: 32px;
-        background-image: url(../img/tb-list-item__check-img_480.png);
-    }
-
     .list__item:not(:last-of-type) {
         margin-bottom: 8px;
     }
 }
+
+
 
 
