--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -448,10 +448,6 @@ button {
   padding-left: 22px;
 }
 
-.block-list__icon {
-  display: none;
-}
-
 .list__title {
   font-size: 32px;
   font-weight: 500;
@@ -500,8 +496,12 @@ button {
   }
 }
 @media only screen and (max-width: 640px) {
-  .block-list__icon {
-    display: none;
+  .index-main-section {
+    height: 563px;
+    background-position: right -180px bottom -190px;
+  }
+  .block-list {
+    top: 338px;
   }
 }
 @media only screen and (max-width: 480px) {
@@ -509,19 +509,12 @@ button {
     background-position: right -180px bottom -190px;
   }
   .discriptin-block__list {
-    padding-top: 40px;
     padding-left: 0px;
   }
   .list__title {
     font-size: 28px;
     line-height: 35px;
     margin-bottom: 16px;
-  }
-  .list__item {
-    font-size: 18px;
-    line-height: 23px;
-    padding-left: 32px;
-    background-image: url(../img/tb-list-item__check-img_480.png);
   }
   .list__item:not(:last-of-type) {
     margin-bottom: 8px;
