--- a/src/html/header.pug
+++ b/src/html/header.pug
@@ -1,6 +1,6 @@
 header.header-section
     .container.header-section__container
-        a(href="https://gubinvs.ru").logo-block
+        a(href="https://gubinvs.ru/lean/").logo-block
             img(src="../img/nav-logo__img.png", alt="Логотип").logo-img
             .logo-border
             .logo-title Менеджмент
