--- a/src/index.pug
+++ b/src/index.pug
@@ -19,7 +19,7 @@ block content
     main
         h1(class="visually-hidden h1-visually", style="visibility: hidden;").h1__visually Внедрение идеологии бережливого производства
         include html/index-page/index-main-section.pug
-        //- include html/index-page/index-step-section.pug
+        include html/index-page/index-step-section.pug
         //- include html/index-page/index-audit-section.pug
         //- include html/index-page/index-regulation-section.pug 
         //- include html/index-page/index-adaptation-section.pug
