--- a/src/scss/index-page/index-step-section.css
+++ b/src/scss/index-page/index-step-section.css
@@ -6,6 +6,7 @@
 
 .discription-block {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
 }
 
@@ -17,6 +18,7 @@
   padding-bottom: 50px;
   width: 320px;
   border: 1px solid #b9b9b9;
+  margin-bottom: 20px;
 }
 
 .discription-card:not(:last-of-type) {
@@ -62,4 +64,35 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
+}
+
+@media only screen and (max-width: 1024px) {
+  .discription-block {
+    justify-content: flex-start;
+  }
+  .content-title__step-section {
+    padding-left: 0px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .discription-card:not(:last-of-type) {
+    margin-right: 0px;
+  }
+  .discription-card {
+    margin-right: 0px;
+  }
+  .discription-card:nth-child(1) {
+    margin-right: 20px;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .discription-block {
+    justify-content: center;
+  }
+  .content-title__step-section {
+    padding-left: 20px;
+  }
+  .discription-card:nth-child(1) {
+    margin-right: 0px;
+  }
 }/*# sourceMappingURL=index-step-section.css.map */
