--- a/src/scss/index-page/index-step-section.scss
+++ b/src/scss/index-page/index-step-section.scss
@@ -8,6 +8,7 @@
 
 .discription-block {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
 }
 
@@ -19,6 +20,7 @@
     padding-bottom: 50px;
     width: 320px;
     border: 1px solid #b9b9b9;
+    margin-bottom: 20px;
 }
 
 .discription-card:not(:last-of-type) {
@@ -32,7 +34,6 @@
     background-position: center;
     margin-bottom: 50px;
 }
-
 
 .discription-card__img1 {
     background-image: url(../../img/step-section/card-content__img1.jpg);
@@ -67,5 +68,40 @@
     line-height: 20px;
 }
 
+@media only screen and (max-width: 1024px) {
+    .discription-block {
+        justify-content: flex-start;
+    }
 
+    .content-title__step-section {
+        padding-left: 0px;
+    }
+}
 
+@media only screen and (max-width: 768px) {
+    .discription-card:not(:last-of-type) {
+        margin-right: 0px;
+    }
+
+    .discription-card {
+        margin-right: 0px;
+    }
+
+    .discription-card:nth-child(1) {
+        margin-right: 20px;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    .discription-block {
+        justify-content: center;
+    }
+
+    .content-title__step-section {
+        padding-left: 20px;
+    }
+
+    .discription-card:nth-child(1) {
+        margin-right: 0px;
+    }
+}
