--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -528,6 +528,7 @@ button {
 
 .discription-block {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
 }
 
@@ -539,6 +540,7 @@ button {
   padding-bottom: 50px;
   width: 320px;
   border: 1px solid #b9b9b9;
+  margin-bottom: 20px;
 }
 
 .discription-card:not(:last-of-type) {
@@ -586,6 +588,36 @@ button {
   line-height: 20px;
 }
 
+@media only screen and (max-width: 1024px) {
+  .discription-block {
+    justify-content: flex-start;
+  }
+  .content-title__step-section {
+    padding-left: 0px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .discription-card:not(:last-of-type) {
+    margin-right: 0px;
+  }
+  .discription-card {
+    margin-right: 0px;
+  }
+  .discription-card:nth-child(1) {
+    margin-right: 20px;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .discription-block {
+    justify-content: center;
+  }
+  .content-title__step-section {
+    padding-left: 20px;
+  }
+  .discription-card:nth-child(1) {
+    margin-right: 0px;
+  }
+}
 .index-audit-section {
   position: relative;
   max-width: 1280px;
