--- a/Compiled/css/style.css
+++ b/Compiled/css/style.css
@@ -686,6 +686,7 @@ button {
 .index-audit-section__discription-block {
   flex-direction: column;
   align-items: flex-end;
+  padding-right: 120px;
 }
 
 .discription-block__icon-list {
@@ -717,6 +718,11 @@ button {
   line-height: 35px;
 }
 
+@media only screen and (max-width: 1280px) {
+  .index-audit-section__discription-block {
+    padding-right: 0px;
+  }
+}
 /* Указываем box sizing */
 *,
 *::before,
