--- a/src/scss/index-page/index-audit-section.scss
+++ b/src/scss/index-page/index-audit-section.scss
@@ -51,6 +51,7 @@
 .index-audit-section__discription-block {
     flex-direction: column;
     align-items: flex-end;
+    padding-right: 120px;
 }
 
 .discription-block__icon-list {
@@ -80,4 +81,26 @@
     font-weight: 300;
     font-size: 28px;
     line-height: 35px;
+}
+
+@media only screen and (max-width: 1280px) {
+    .index-audit-section__discription-block {
+        padding-right: 0px;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+
+}
+
+@media only screen and (max-width: 768px) {
+
+}
+
+@media only screen and (max-width: 480px) {
+ 
+}
+
+@media only screen and (max-width: 360px) {
+
 }
