--- a/src/html/index-page/index-audit-section.pug
+++ b/src/html/index-page/index-audit-section.pug
@@ -1,10 +1,9 @@
 section.index-audit-section
     img(src="../../img/index-page/audit__img.png", alt="Карта пропуск для посещения").index-audit-section__img
     .content-block
-        .title-block
-            .title-block__line-left
+        .title-block.title-block-ias
+            .title-block__line-left.title-block__line-left_ias
             h2.title-block__title Процесс трансформации
-            .title-block__line-right
     .container
         .discription-block.index-audit-section__discription-block
             .discription-block__icon-list
