--- a/src/scss/index-page/index-audit-section.css
+++ b/src/scss/index-page/index-audit-section.css
@@ -4,6 +4,10 @@
   margin-bottom: 80px;
 }
 
+.title-block-ias {
+  justify-content: flex-start;
+}
+
 .index-audit-section__img {
   position: absolute;
   top: 83px;
@@ -83,5 +87,10 @@
 @media only screen and (max-width: 1280px) {
   .index-audit-section__discription-block {
     padding-right: 0px;
+  }
+}
+@media only screen and (max-width: 1024px) {
+  .index-audit-section__img {
+    display: none;
   }
 }/*# sourceMappingURL=index-audit-section.css.map */
