--- a/Compiled/css/style.css
+++ b/Compiled/css/style.css
@@ -642,6 +642,10 @@ button {
   margin-bottom: 80px;
 }
 
+.title-block-ias {
+  justify-content: flex-start;
+}
+
 .index-audit-section__img {
   position: absolute;
   top: 83px;
@@ -721,6 +725,11 @@ button {
 @media only screen and (max-width: 1280px) {
   .index-audit-section__discription-block {
     padding-right: 0px;
+  }
+}
+@media only screen and (max-width: 1024px) {
+  .index-audit-section__img {
+    display: none;
   }
 }
 /* Указываем box sizing */
