--- a/src/scss/lean-page-style.css
+++ b/src/scss/lean-page-style.css
@@ -234,7 +234,6 @@
   position: relative;
   max-width: 1280px;
   margin-bottom: 80px;
-  padding-right: 120px;
 }
 
 .index-audit-section__img {
@@ -281,6 +280,7 @@
 .index-audit-section__discription-block {
   flex-direction: column;
   align-items: flex-end;
+  padding-right: 120px;
 }
 
 .discription-block__icon-list {
@@ -312,6 +312,16 @@
   line-height: 35px;
 }
 
+@media only screen and (max-width: 1280px) {
+  .index-audit-section__discription-block {
+    padding-right: 0px;
+  }
+}
+@media only screen and (max-width: 1024px) {
+  .index-audit-section__img {
+    display: none;
+  }
+}
 /* Указываем box sizing */
 *,
 *::before,
