--- a/src/html/index-page/index-audit-section.pug
+++ b/src/html/index-page/index-audit-section.pug
@@ -12,7 +12,7 @@ section.index-audit-section
                 img(src="../../img/index-page/audit-block-content__item3.svg", alt="Иконка с окном браузера и шестеренкой для настройки").discription-block__icon-item
             .discription-block__content
                 .content__title Анализируем существующие бизнес-процессы
-                .content__discr На время становимся частью вашей команды, изучаем как выстроены бизнес-процессы, выявляем проблемные места и разрабатываем план изменений.
+                .content__discr.content__discr_ias На время становимся частью вашей команды, изучаем как выстроены бизнес-процессы, выявляем проблемные места и разрабатываем план изменений.
     .border-block
         .border-block__black-line 
         .border-block__red-line  
