--- a/src/scss/index-page/index-audit-section.css
+++ b/src/scss/index-page/index-audit-section.css
@@ -149,7 +149,13 @@
   }
 }
 @media only screen and (max-width: 480px) {
+  .content-block-ias {
+    padding-top: 0px !important;
+  }
   .title-block__title {
     display: none;
+  }
+  .index-audit-section {
+    margin-bottom: 8px;
   }
 }/*# sourceMappingURL=index-audit-section.css.map */
