--- a/src/scss/index-page/index-audit-section.scss
+++ b/src/scss/index-page/index-audit-section.scss
@@ -169,8 +169,15 @@
 }
 
 @media only screen and (max-width: 480px) {
+    .content-block-ias {
+        padding-top: 0px !important;
+    }
+    
     .title-block__title {
         display: none;
     }
 
+    .index-audit-section {
+        margin-bottom: 8px;
+    }
 }
