--- a/src/html/index-page/index-audit-section.pug
+++ b/src/html/index-page/index-audit-section.pug
@@ -1,6 +1,6 @@
 section.index-audit-section
     img(src="../../img/index-page/audit__img.png", alt="Карта пропуск для посещения").index-audit-section__img
-    .content-block
+    .content-block.content-block-ias
         .title-block.title-block-ias
             .title-block__line-left.title-block__line-left_ias
             h2.title-block__title Процесс трансформации
