--- a/src/html/index-page/index-regulation-section.pug
+++ b/src/html/index-page/index-regulation-section.pug
@@ -10,8 +10,8 @@ section.index-audit-section.index-regulation-section
                 .content__list
                     .content-list__item.content-list__item_regulation <b>Структуру управления предприятием </b> с распределением ролей и курируемых вопросов
                     .content-list__item.content-list__item_regulation <b>Должностные инструкции </b> с распределением обязанностей, прав и ответственности
-                    .content-list__item.content-list__item_regulation <b>Систему мотивации,</b> а также оценки вовлеченности работника в процесс
-                    .content-list__item.content-list__item_regulation <b>Технологические инструкции </b> выполнения технологических операций
+                    .content-list__item.content-list__item_regulation <b>Систему мотивации,</b> и оценки вовлеченности персонала в процесс
+                    .content-list__item.content-list__item_regulation <b>Инструкции </b> по выполнению технологических операций
     .border-block.border-block_regulation-section
         .border-block__black-line.border-block__black-line_regulation-section 
         .border-block__red-line.border-block__red-line_regulation-section 
