--- a/src/html/index-page/index-regulation-section.pug
+++ b/src/html/index-page/index-regulation-section.pug
@@ -1,10 +1,11 @@
 section.index-audit-section.index-regulation-section
     img(src="../../img/index-page/standart-block-content__img.png", alt="Стопка книг со стандартами предприятия").index-audit-section__img.index-regulation-section__img
-    .content-block
+    .content-block.content-block-irs
         .title-block.title-block_index-regulation-section
-            //- .title-block__title Регламентирование
+            .title-block__title.title-block__title_irs Регламентирование
+            .title-block__line-left
     .container
-        .discription-block.discription-block_index-audit-section           
+        .discription-block.discription-block-irs         
             .discription-block__content
                 h3.content__title.content__title_adaptation-section Разрабатываем нормативную документацию
                 .content__list
