--- a/src/scss/index-page/index-regulation-section.css
+++ b/src/scss/index-page/index-regulation-section.css
@@ -105,12 +105,17 @@ select {
 }
 
 .title-block_index-regulation-section {
-  justify-content: center;
+  justify-content: flex-end;
 }
 
-.discription-block_index-audit-section {
+.title-block__title_irs {
+  padding-left: 0px !important;
+  margin-right: 20px;
+}
+
+.discription-block-irs {
   justify-content: flex-start;
-  padding-left: 80px;
+  padding-left: 160px;
 }
 
 .index-regulation-section__img {
@@ -119,6 +124,7 @@ select {
 }
 
 .content-list__item_regulation {
+  padding-left: 44px !important;
   background-image: url(../../img/index-page/check-circle.svg);
 }
 
@@ -140,4 +146,10 @@ select {
   top: 334px;
   left: -170px;
   right: initial;
+}
+
+@media only screen and (max-width: 1280px) {
+  .discription-block-irs {
+    padding-left: 20px;
+  }
 }/*# sourceMappingURL=index-regulation-section.css.map */
