--- a/src/scss/index-page/index-regulation-section.scss
+++ b/src/scss/index-page/index-regulation-section.scss
@@ -6,12 +6,17 @@
 }
 
 .title-block_index-regulation-section {
-    justify-content: center;
+    justify-content: flex-end;
 }
 
-.discription-block_index-audit-section {
+.title-block__title_irs {
+    padding-left: 0px !important;
+    margin-right: 20px;
+}
+
+.discription-block-irs {
     justify-content: flex-start;
-    padding-left: 80px;
+    padding-left: 160px;
 }
 
 .index-regulation-section__img {
@@ -20,9 +25,9 @@
 }
 
 .content-list__item_regulation {
+    padding-left: 44px !important;
     background-image: url(../../img/index-page/check-circle.svg);
 }
-
 
 .border-block_regulation-section {
     flex-direction: row-reverse;
@@ -43,4 +48,26 @@
     top: 334px;
     left: -170px;
     right: initial;
+}
+
+@media only screen and (max-width: 1280px) {
+    .discription-block-irs {
+        padding-left: 20px;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+
+}
+
+@media only screen and (max-width: 768px) {
+
+}
+
+@media only screen and (max-width: 480px) {
+
+}
+
+@media only screen and (max-width: 360px) {
+  
 }
