--- a/src/html/index-page/index-adaptation-section.pug
+++ b/src/html/index-page/index-adaptation-section.pug
@@ -2,7 +2,7 @@ section.index-audit-section.index-adaptation-section
     img(src="../../img/index-page/adaptation__img.png", alt="Молодые ребята и девчата с книгами в охабку радуются будущим знаниям").index-audit-section__img
     .content-block
         .title-block.index-adaptation-section__title-block
-            //- .title-block__title Внедрение стандартов
+            .title-block__title Внедрение
     .container
         .discription-block.index-audit-section__discription-block            
             .discription-block__content
