--- a/src/html/index-page/index-audit-section.pug
+++ b/src/html/index-page/index-audit-section.pug
@@ -3,7 +3,7 @@ section.index-audit-section
     .content-block.content-block-ias
         .title-block.title-block-ias
             .title-block__line-left.title-block__line-left_ias
-            h2.title-block__title Процесс трансформации
+            h2.title-block__title Аудит
     .container
         .discription-block.index-audit-section__discription-block
             .discription-block__icon-list
