--- a/Compiled/css/style.css
+++ b/Compiled/css/style.css
@@ -920,6 +920,7 @@ select {
 
 .title-block_index-regulation-section {
   justify-content: flex-end;
+  margin-bottom: 120px;
 }
 
 .title-block__title_irs {
@@ -934,7 +935,7 @@ select {
 
 .index-regulation-section__img {
   top: 200px;
-  right: 0px;
+  right: 20px;
 }
 
 .content-list__item_regulation {
@@ -964,7 +965,7 @@ select {
 
 @media only screen and (max-width: 1280px) {
   .discription-block-irs {
-    padding-left: 80px;
+    padding-left: 20px;
   }
 }
 /* Указываем box sizing */
