--- a/src/html/index-page/index-adaptation-section.pug
+++ b/src/html/index-page/index-adaptation-section.pug
@@ -2,11 +2,11 @@ section.index-audit-section.index-adaptation-section
     img(src="../../img/index-page/adaptation__img.png", alt="Молодые ребята и девчата с книгами в охабку радуются будущим знаниям").index-audit-section__img
     .content-block
         .title-block.index-adaptation-section__title-block
-            .title-block__title Внедрение
+            .title-block__title Внедряем
     .container
         .discription-block.index-audit-section__discription-block            
             .discription-block__content
-                h2.content__title.content__title_adaptation-section Внедряем систему менеджмента качества (СМК)
+                h2.content__title.content__title_adaptation-section Внедрение системы менеджмента качества (СМК)
                 .content__list
                     .content-list__item.content-list__item1 <b>Обучаем персонал</b> новым стандартам и бизнес-процессам 
                     .content-list__item.content-list__item2 <b>Верифицируем знания</b> полученные в процессе обучения
