--- a/src/html/index-page/index-audit-section.pug
+++ b/src/html/index-page/index-audit-section.pug
@@ -3,7 +3,7 @@ section.index-audit-section
     .content-block.content-block-ias
         .title-block.title-block-ias
             .title-block__line-left.title-block__line-left_ias
-            h2.title-block__title Аудит
+            h2.title-block__title Анализируем
     .container
         .discription-block.index-audit-section__discription-block
             .discription-block__icon-list
@@ -11,7 +11,7 @@ section.index-audit-section
                 img(src="../../img/index-page/audit-block-content__item2.svg", alt="Иконка с прицелом на личность").discription-block__icon-item 
                 img(src="../../img/index-page/audit-block-content__item3.svg", alt="Иконка с окном браузера и шестеренкой для настройки").discription-block__icon-item
             .discription-block__content
-                .content__title Анализируем существующие бизнес-процессы
+                .content__title Аудит существующих бизнес-процессов
                 .content__discr.content__discr_ias На время становимся частью вашей команды, изучаем как выстроены бизнес-процессы, выявляем проблемные места и разрабатываем план изменений.
     .border-block
         .border-block__black-line 
