--- a/src/scss/index-page/index-regulation-section.scss
+++ b/src/scss/index-page/index-regulation-section.scss
@@ -7,7 +7,10 @@
 
 .title-block_index-regulation-section {
     justify-content: flex-end;
+    margin-bottom: 120px;
 }
+
+
 
 .title-block__title_irs {
     padding-left: 0px !important;
@@ -21,7 +24,7 @@
 
 .index-regulation-section__img {
     top: 200px;
-    right: 0px;
+    right: 20px;
 }
 
 .content-list__item_regulation {
