--- a/src/scss/lean-page-style.css
+++ b/src/scss/lean-page-style.css
@@ -381,8 +381,14 @@
   }
 }
 @media only screen and (max-width: 480px) {
+  .content-block-ias {
+    padding-top: 0px !important;
+  }
   .title-block__title {
     display: none;
+  }
+  .index-audit-section {
+    margin-bottom: 8px;
   }
 }
 /* Указываем box sizing */
@@ -491,12 +497,17 @@ select {
 }
 
 .title-block_index-regulation-section {
-  justify-content: center;
+  justify-content: flex-end;
 }
 
-.discription-block_index-audit-section {
+.title-block__title_irs {
+  padding-left: 0px !important;
+  margin-right: 20px;
+}
+
+.discription-block-irs {
   justify-content: flex-start;
-  padding-left: 80px;
+  padding-left: 160px;
 }
 
 .index-regulation-section__img {
@@ -505,6 +516,7 @@ select {
 }
 
 .content-list__item_regulation {
+  padding-left: 44px !important;
   background-image: url(../../img/index-page/check-circle.svg);
 }
 
@@ -528,6 +540,11 @@ select {
   right: initial;
 }
 
+@media only screen and (max-width: 1280px) {
+  .discription-block-irs {
+    padding-left: 20px;
+  }
+}
 /* Указываем box sizing */
 *,
 *::before,
