--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -886,6 +886,7 @@ select {
 
 .title-block_index-regulation-section {
   justify-content: flex-end;
+  margin-bottom: 120px;
 }
 
 .title-block__title_irs {
@@ -900,7 +901,7 @@ select {
 
 .index-regulation-section__img {
   top: 200px;
-  right: 0px;
+  right: 20px;
 }
 
 .content-list__item_regulation {
@@ -930,7 +931,7 @@ select {
 
 @media only screen and (max-width: 1280px) {
   .discription-block-irs {
-    padding-left: 80px;
+    padding-left: 20px;
   }
 }
 /* Указываем box sizing */
