--- a/src/html/index-page/index-regulation-section.pug
+++ b/src/html/index-page/index-regulation-section.pug
@@ -3,16 +3,16 @@ section.index-audit-section.index-regulation-section
     .content-block.content-block-irs
         .title-block.title-block_index-regulation-section
             .title-block__title.title-block__title_irs Регламентируем
-            .title-block__line-left
+            .title-block__line-left.title-block__line-left_irs
     .container
         .discription-block.discription-block-irs         
             .discription-block__content
                 h3.content__title.content__title_adaptation-section Разрабатываем нормативную документацию
                 .content__list
-                    .content-list__item.content-list__item_regulation <b>Структуру управления предприятием </b> с распределением ролей и полномочий
-                    .content-list__item.content-list__item_regulation <b>Должностные инструкции </b> с распределением обязанностей, прав и ответственности
-                    .content-list__item.content-list__item_regulation <b>Систему мотивации,</b> и оценки вовлеченности персонала в процесс
-                    .content-list__item.content-list__item_regulation <b>Технологические инструкции </b>для стандартизации бизнес-процессов
+                    .content-list__item.content-list__item_regulation <b>Структуру управления предприятием </b> с распределением ролей и полномочий;
+                    .content-list__item.content-list__item_regulation <b>Должностные инструкции </b> с распределением обязанностей, прав и ответственности;
+                    .content-list__item.content-list__item_regulation <b>Систему мотивации,</b> и оценки вовлеченности персонала в процесс;
+                    .content-list__item.content-list__item_regulation <b>Технологические инструкции </b>для стандартизации бизнес-процессов.
     .border-block.border-block_regulation-section
         .border-block__black-line.border-block__black-line_regulation-section 
         .border-block__red-line.border-block__red-line_regulation-section 
