--- a/src/scss/index-page/index-regulation-section.css
+++ b/src/scss/index-page/index-regulation-section.css
@@ -151,6 +151,19 @@ select {
 
 @media only screen and (max-width: 1280px) {
   .discription-block-irs {
-    padding-left: 20px;
+    padding-left: 140px;
+  }
+}
+@media only screen and (max-width: 1024px) {
+  .title-block__line-left_irs {
+    width: 90px;
+  }
+  .discription-block-irs {
+    padding-left: 165px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .discription-block-irs {
+    padding-left: 40px;
   }
 }/*# sourceMappingURL=index-regulation-section.css.map */
