--- a/src/scss/index-page/index-regulation-section.scss
+++ b/src/scss/index-page/index-regulation-section.scss
@@ -10,8 +10,6 @@
     margin-bottom: 120px;
 }
 
-
-
 .title-block__title_irs {
     padding-left: 0px !important;
     margin-right: 20px;
@@ -55,16 +53,24 @@
 
 @media only screen and (max-width: 1280px) {
     .discription-block-irs {
-        padding-left: 20px;
+        padding-left: 140px;
     }
 }
 
 @media only screen and (max-width: 1024px) {
+    .title-block__line-left_irs {
+        width: 90px;
+    }
 
+    .discription-block-irs {
+        padding-left: 165px;
+    }
 }
 
 @media only screen and (max-width: 768px) {
-
+    .discription-block-irs {
+        padding-left: 40px;
+    }
 }
 
 @media only screen and (max-width: 480px) {
