--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -931,7 +931,20 @@ select {
 
 @media only screen and (max-width: 1280px) {
   .discription-block-irs {
-    padding-left: 20px;
+    padding-left: 140px;
+  }
+}
+@media only screen and (max-width: 1024px) {
+  .title-block__line-left_irs {
+    width: 90px;
+  }
+  .discription-block-irs {
+    padding-left: 165px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .discription-block-irs {
+    padding-left: 40px;
   }
 }
 /* Указываем box sizing */
