--- a/src/scss/lean-page-style.css
+++ b/src/scss/lean-page-style.css
@@ -498,6 +498,7 @@ select {
 
 .title-block_index-regulation-section {
   justify-content: flex-end;
+  margin-bottom: 120px;
 }
 
 .title-block__title_irs {
@@ -512,7 +513,7 @@ select {
 
 .index-regulation-section__img {
   top: 200px;
-  right: 0px;
+  right: 20px;
 }
 
 .content-list__item_regulation {
@@ -542,7 +543,20 @@ select {
 
 @media only screen and (max-width: 1280px) {
   .discription-block-irs {
-    padding-left: 20px;
+    padding-left: 140px;
+  }
+}
+@media only screen and (max-width: 1024px) {
+  .title-block__line-left_irs {
+    width: 90px;
+  }
+  .discription-block-irs {
+    padding-left: 165px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .discription-block-irs {
+    padding-left: 40px;
   }
 }
 /* Указываем box sizing */
