--- a/src/index.pug
+++ b/src/index.pug
@@ -22,7 +22,7 @@ block content
         //--include html/index-page/index-step-section.pug
         include html/index-page/index-audit-section.pug
         include html/index-page/index-regulation-section.pug 
-        //--include html/index-page/index-adaptation-section.pug
+        include html/index-page/index-adaptation-section.pug
         //- include html/index-page/index-task-section.pug
         //- include html/supply-page/supply-request-section.pug
     //- include html/footer.pug 
