--- a/src/html/index-page/index-adaptation-section.pug
+++ b/src/html/index-page/index-adaptation-section.pug
@@ -1,10 +1,12 @@
 section.index-audit-section.index-adaptation-section
-    img(src="../../img/index-page/adaptation__img.png", alt="Молодые ребята и девчата с книгами в охабку радуются будущим знаниям").index-audit-section__img
+    img(src="../../img/index-page/adaptation__img.png", alt="Молодые ребята и девчата с книгами в охабку радуются будущим знаниям").index-audit-section__img.index-adaptation-section__img
     .content-block
         .title-block.index-adaptation-section__title-block
-            .title-block__title Внедряем
+            .title-block__line-left.title-block__line-left_iadsec
+            .title-block__title.title-block__title_iadsec Внедряем
+            
     .container
-        .discription-block.index-audit-section__discription-block            
+        .discription-block.index-adaptation-section__discription-block           
             .discription-block__content
                 h2.content__title.content__title_adaptation-section Внедрение системы менеджмента качества (СМК)
                 .content__list
