--- a/src/scss/index-page/index-adaptation-section.scss
+++ b/src/scss/index-page/index-adaptation-section.scss
@@ -1,13 +1,28 @@
 //-- сброс стилей
 @import '../variables/normalize.scss';
 
-.index-adaptation-section {
-    padding-top: 100px;
+.index-adaptation-section__title-block {
+    justify-content: flex-start;
 }
 
+.index-adaptation-section__img {
+    top: 120px !important;
+    left: 20px;
+}
 
-.index-adaptation-section__title-block {
-    justify-content: center;
+.index-adaptation-section__discription-block {
+    flex-direction: column;
+    align-items: flex-end;
+    padding-right: 137px;
+    padding-top: 132px;
+}
+
+.title-block__line-left_iadsec {
+    padding-left: 0px;
+}
+
+.title-block__title_iadsec {
+    margin-right: 20px;
 }
 
 .content__title_adaptation-section {
@@ -48,4 +63,24 @@
 .red-line__text_adaptation-section {
     top: 340px;
     right: -94px;
+}
+
+@media only screen and (max-width: 1280px) {
+ 
+}
+
+@media only screen and (max-width: 1024px) {
+
+}
+
+@media only screen and (max-width: 768px) {
+ 
+}
+
+@media only screen and (max-width: 480px) {
+
+}
+
+@media only screen and (max-width: 360px) {
+
 }
