--- a/src/html/index-page/index-adaptation-section.pug
+++ b/src/html/index-page/index-adaptation-section.pug
@@ -8,7 +8,7 @@ section.index-audit-section.index-adaptation-section
     .container
         .discription-block.index-adaptation-section__discription-block           
             .discription-block__content
-                h2.content__title.content__title_adaptation-section Внедрение системы менеджмента качества (СМК)
+                h2.content__title.content__title_adaptation-section Запускаем систему менеджмента качества (СМК)
                 .content__list
                     .content-list__item.content-list__item1 <b>Обучаем персонал</b> новым стандартам и бизнес-процессам 
                     .content-list__item.content-list__item2 <b>Верифицируем знания</b> полученные в процессе обучения
