--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1063,6 +1063,7 @@ select {
 
 .index-adaptation-section__img {
   top: 120px !important;
+  left: 20px;
 }
 
 .index-adaptation-section__discription-block {
