--- a/src/scss/index-page/index-adaptation-section.css
+++ b/src/scss/index-page/index-adaptation-section.css
@@ -161,4 +161,19 @@ select {
 .red-line__text_adaptation-section {
   top: 340px;
   right: -94px;
+}
+
+@media only screen and (max-width: 1280px) {
+  .discription-block__content__iadsec {
+    width: 65% !important;
+  }
+}
+@media only screen and (max-width: 1024px) {
+  .discription-block__content__iadsec {
+    width: 80% !important;
+  }
+  .index-adaptation-section__discription-block {
+    padding-right: 0px;
+    padding-top: 0px;
+  }
 }/*# sourceMappingURL=index-adaptation-section.css.map */
