--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1120,6 +1120,20 @@ select {
   right: -94px;
 }
 
+@media only screen and (max-width: 1280px) {
+  .discription-block__content__iadsec {
+    width: 65% !important;
+  }
+}
+@media only screen and (max-width: 1024px) {
+  .discription-block__content__iadsec {
+    width: 80% !important;
+  }
+  .index-adaptation-section__discription-block {
+    padding-right: 0px;
+    padding-top: 0px;
+  }
+}
 .index-task-section {
   position: relative;
   max-width: 1280px;
