--- a/src/scss/index-page/index-regulation-section.css
+++ b/src/scss/index-page/index-regulation-section.css
@@ -163,6 +163,9 @@ select {
   }
 }
 @media only screen and (max-width: 768px) {
+  .index-regulation-section {
+    margin-bottom: 0px;
+  }
   .content-block-irs {
     padding-top: 20px !important;
   }
@@ -170,7 +173,7 @@ select {
     padding-left: 0px;
   }
   .title-block_index-regulation-section {
-    margin-bottom: 50px !important;
+    margin-bottom: 20px !important;
   }
   .content-list__item_regulation {
     font-size: 20px;
