--- a/Compiled/css/style.css
+++ b/Compiled/css/style.css
@@ -482,6 +482,10 @@ button {
   }
 }
 @media only screen and (max-width: 768px) {
+  .title-block {
+    margin-bottom: 40px;
+  }
+
   .block-list {
     padding: 10px 20px 20px 10px;
   }
@@ -753,6 +757,10 @@ button {
   }
 }
 @media only screen and (max-width: 768px) {
+  .index-audit-section {
+    margin-bottom: 0px;
+  }
+
   .title-block-ias {
     margin-bottom: 20px;
   }
@@ -801,7 +809,7 @@ button {
 }
 @media only screen and (max-width: 480px) {
   .content-block-ias {
-    padding-top: 0px !important;
+    padding-top: 40px !important;
   }
 
   .title-block__title {
@@ -977,6 +985,10 @@ select {
   }
 }
 @media only screen and (max-width: 768px) {
+  .index-regulation-section {
+    margin-bottom: 0px;
+  }
+
   .content-block-irs {
     padding-top: 20px !important;
   }
@@ -986,7 +998,7 @@ select {
   }
 
   .title-block_index-regulation-section {
-    margin-bottom: 50px !important;
+    margin-bottom: 20px !important;
   }
 
   .content-list__item_regulation {
@@ -1171,6 +1183,15 @@ select {
   .index-adaptation-section__discription-block {
     padding-right: 0px;
     padding-top: 0px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .discription-block__content__iadsec {
+    width: 100% !important;
+  }
+
+  .title-block__line-left_iadsec {
+    width: 90px !important;
   }
 }
 .index-task-section {
