--- a/src/scss/index-page/index-adaptation-section.css
+++ b/src/scss/index-page/index-adaptation-section.css
@@ -176,4 +176,12 @@ select {
     padding-right: 0px;
     padding-top: 0px;
   }
+}
+@media only screen and (max-width: 768px) {
+  .discription-block__content__iadsec {
+    width: 100% !important;
+  }
+  .title-block__line-left_iadsec {
+    width: 90px !important;
+  }
 }/*# sourceMappingURL=index-adaptation-section.css.map */
