--- a/src/scss/index-page/index-adaptation-section.scss
+++ b/src/scss/index-page/index-adaptation-section.scss
@@ -86,6 +86,13 @@
 }
 
 @media only screen and (max-width: 768px) {
+    .discription-block__content__iadsec {
+        width: 100% !important;
+    }
+
+    .title-block__line-left_iadsec {
+        width: 90px !important;
+    }
  
 }
 
