--- a/src/scss/index-page/index-audit-section.css
+++ b/src/scss/index-page/index-audit-section.css
@@ -110,6 +110,9 @@
   }
 }
 @media only screen and (max-width: 768px) {
+  .index-audit-section {
+    margin-bottom: 0px;
+  }
   .title-block-ias {
     margin-bottom: 20px;
   }
@@ -149,7 +152,7 @@
 }
 @media only screen and (max-width: 480px) {
   .content-block-ias {
-    padding-top: 0px !important;
+    padding-top: 40px !important;
   }
   .title-block__title {
     display: none;
