--- a/src/scss/index-page/index-audit-section.scss
+++ b/src/scss/index-page/index-audit-section.scss
@@ -120,6 +120,10 @@
 }
 
 @media only screen and (max-width: 768px) {
+    .index-audit-section {
+        margin-bottom: 0px;
+    }
+
     .title-block-ias {
         margin-bottom: 20px;
     }
@@ -169,7 +173,7 @@
 
 @media only screen and (max-width: 480px) {
     .content-block-ias {
-        padding-top: 0px !important;
+        padding-top: 40px !important;
     }
     
     .title-block__title {
