--- a/src/scss/index-page/index-main-section.css
+++ b/src/scss/index-page/index-main-section.css
@@ -88,6 +88,9 @@
   }
 }
 @media only screen and (max-width: 768px) {
+  .title-block {
+    margin-bottom: 40px;
+  }
   .block-list {
     padding: 10px 20px 20px 10px;
   }
