--- a/src/scss/index-page/index-main-section.scss
+++ b/src/scss/index-page/index-main-section.scss
@@ -91,6 +91,10 @@
 }
 
 @media only screen and (max-width: 768px) {    
+    .title-block {
+        margin-bottom: 40px;
+    }
+    
     .block-list {
         padding: 10px 20px 20px 10px;
     }
