--- a/src/scss/index-page/index-regulation-section.scss
+++ b/src/scss/index-page/index-regulation-section.scss
@@ -68,6 +68,10 @@
 }
 
 @media only screen and (max-width: 768px) {
+    .index-regulation-section {
+        margin-bottom: 0px;
+    }
+
     .content-block-irs {
         padding-top: 20px !important;
     }
@@ -77,7 +81,7 @@
     }
 
     .title-block_index-regulation-section {
-       margin-bottom: 50px !important;
+       margin-bottom: 20px !important;
     }
 
     .content-list__item_regulation {
