--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -477,6 +477,9 @@ button {
   }
 }
 @media only screen and (max-width: 768px) {
+  .title-block {
+    margin-bottom: 40px;
+  }
   .block-list {
     padding: 10px 20px 20px 10px;
   }
@@ -730,6 +733,9 @@ button {
   }
 }
 @media only screen and (max-width: 768px) {
+  .index-audit-section {
+    margin-bottom: 0px;
+  }
   .title-block-ias {
     margin-bottom: 20px;
   }
@@ -769,7 +775,7 @@ button {
 }
 @media only screen and (max-width: 480px) {
   .content-block-ias {
-    padding-top: 0px !important;
+    padding-top: 40px !important;
   }
   .title-block__title {
     display: none;
@@ -942,6 +948,9 @@ select {
   }
 }
 @media only screen and (max-width: 768px) {
+  .index-regulation-section {
+    margin-bottom: 0px;
+  }
   .content-block-irs {
     padding-top: 20px !important;
   }
@@ -949,7 +958,7 @@ select {
     padding-left: 0px;
   }
   .title-block_index-regulation-section {
-    margin-bottom: 50px !important;
+    margin-bottom: 20px !important;
   }
   .content-list__item_regulation {
     font-size: 20px;
@@ -1132,6 +1141,14 @@ select {
   .index-adaptation-section__discription-block {
     padding-right: 0px;
     padding-top: 0px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .discription-block__content__iadsec {
+    width: 100% !important;
+  }
+  .title-block__line-left_iadsec {
+    width: 90px !important;
   }
 }
 .index-task-section {
