--- a/src/html/index-page/index-task-section.pug
+++ b/src/html/index-page/index-task-section.pug
@@ -1,6 +1,6 @@
 section.index-task-section 
     .title-block.title-block__task-section
-        .title-block__line-left
+        .title-block__line-left.title-block__line-left_task
         h2.title-block__title Решаем следующие задачи
     .container
         .index-task-block   
@@ -15,7 +15,7 @@ section.index-task-section
                 .index-task-card__content Увеличиваем количество довольных клиентов
             .index-task-card  
                 img(src="../../img/index-page/task-icon_4.svg", alt="Силуэты нескольких людей плечем к плечу").index-task-card__icon 
-                .index-task-card__content Привлекаем сотрудников с высокими компетенциями
+                .index-task-card__content Притягиваем сотрудников с высокими компетенциями
         h2.content__title.content__title_adaptation-section Как это работает
         .case-block
             .case-block__card
