--- a/src/scss/index-page/index-task-section.css
+++ b/src/scss/index-page/index-task-section.css
@@ -75,4 +75,31 @@
   font-weight: 400;
   font-size: 22px;
   line-height: 30px;
+}
+
+@media only screen and (max-width: 1024px) {
+  .title-block__line-left_task {
+    width: 90px !important;
+  }
+  .index-task-block {
+    justify-content: flex-start;
+    padding-left: 100px;
+  }
+  .index-task-card {
+    margin-right: 0px;
+  }
+  .index-task-card:not(:last-of-type) {
+    margin-bottom: 20px;
+  }
+  .index-task-card:nth-child(odd) {
+    margin-right: 0px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .index-task-block {
+    padding-left: 0px;
+  }
+  .index-task-card {
+    width: 96%;
+  }
 }/*# sourceMappingURL=index-task-section.css.map */
