--- a/src/scss/index-page/index-task-section.scss
+++ b/src/scss/index-page/index-task-section.scss
@@ -65,7 +65,6 @@
     width: 400px;
 }
 
-
 .action__title,
 .result__title {
     font-style: normal;
@@ -75,11 +74,56 @@
     margin-bottom: 20px;
 }
 
-
 .action__discr,
 .result__discr {
     font-style: normal;
     font-weight: 400;
     font-size: 22px;
     line-height: 30px;
+}
+
+
+@media only screen and (max-width: 1024px) {
+    .title-block__line-left_task {
+        width: 90px !important;
+    }
+
+    .index-task-block {
+        justify-content: flex-start;
+        padding-left: 100px;
+    }
+
+    .index-task-card {
+        margin-right: 0px;
+    }
+
+    .index-task-card:not(:last-of-type) {
+        margin-bottom: 20px;
+    }
+
+    //-- все нечентые элементы
+    .index-task-card:nth-child(odd) {
+        margin-right: 0px;
+    }
+
+}
+
+@media only screen and (max-width: 768px) {
+    .index-task-block {
+        
+        padding-left: 0px;
+    }
+
+    .index-task-card {
+        width: 96%;
+    }
+
+}
+
+@media only screen and (max-width: 480px) {
+
+}
+
+@media only screen and (max-width: 360px) {
+  
 }
