--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1230,6 +1230,32 @@ select {
   line-height: 30px;
 }
 
+@media only screen and (max-width: 1024px) {
+  .title-block__line-left_task {
+    width: 90px !important;
+  }
+  .index-task-block {
+    justify-content: flex-start;
+    padding-left: 100px;
+  }
+  .index-task-card {
+    margin-right: 0px;
+  }
+  .index-task-card:not(:last-of-type) {
+    margin-bottom: 20px;
+  }
+  .index-task-card:nth-child(odd) {
+    margin-right: 0px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .index-task-block {
+    padding-left: 0px;
+  }
+  .index-task-card {
+    width: 96%;
+  }
+}
 .supply-footer {
   display: flex;
   background-color: #8E0532;
